# goggy

./: .gitignore  CLAUDE.md  PLAN.md  README.md  goggy.example.toml  main.py  pyproject.toml  smoke_test.py  test_v3.py
goggy/: __init__.py  auth.py  backup.py  cli.py  config.py  i18n.py  main.py  posts.py  ratelimit.py  settings.py  twofa.py  uploads.py
goggy/static/: editor.js  pygments.css  style.css  theme.js
goggy/templates/: 404.html  _macros.html  base.html  edit.html  index.html  login.html  post.html  revisions.html  search.html  settings.html  tag.html  twofa_codes.html  twofa_manage.html  twofa_setup.html  twofa_verify.html
