[project]
name = "goggy"
version = "0.1.0"
description = "Goggy — a simple, readable single-admin blogging platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "python-frontmatter>=1.1",
    "markdown>=3.7",
    "bcrypt>=4.2",
    "pygments>=2.20.0",
    "nh3>=0.3.5",
    "pyotp>=2.9.0",
    "segno>=1.6.6",
]

[project.scripts]
goggy = "goggy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["goggy"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
